# plazma

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.in.h
.github/workflows/: ci.yml  release.yml
Plazma/: CMakeLists.txt
Plazma/src/: api.cpp  api.h  application.cpp  application.h  client.cpp  client.h  detail.h  main.cpp  resources.qrc  rpc-client.cpp  rpc-client.h  session.cpp  session.h  settings.h  utils.cpp  utils.h
Plazma/src/controllers/: pageController.cpp  pageController.h
Plazma/src/core/: fatal.cpp  fatal.h  osSignalHandler.cpp
Plazma/src/locales/: ru.ts
Plazma/src/models/: auth_code_model.cpp  downloads_model.cpp  downloads_model.h  file_dialog_model.cpp  file_dialog_model.h  phone_number_model.cpp  profile_model.h  (+7 more)
PlazmaServer/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
PlazmaServer/.devcontainer/: devcontainer.json
PlazmaServer/configs/: config.yaml  config_vars.yaml
PlazmaServer/docs/: api.yaml  video_search.md
PlazmaServer/migrations/: 003_add_auth_fields.cql
PlazmaServer/src/: main.cpp
src/: application.cpp  application.h  client.cpp  client.h  detail.h  main.cpp  plazma_application.cpp  plazma_application.h  resources.qrc  settings.h  utils.h
src/client/: plazma_application.cpp  plazma_application.h
src/controllers/: pageController.cpp  pageController.h  systemController.cpp  systemController.h
src/core/: osSignalHandler.h
src/locales/: ru.ts
src/models/: auth_code_model.cpp  auth_code_model.h  language_model.cpp  language_model.h  phone_number_model.cpp  phone_number_model.h
src/ui/: main.qml
(+136 files in other folders)
